home page header image jump issue fix on desktop v2

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-.skrollr-desktop #wrapper.skrollable-after {
+.skrollr-desktop #wrapper.skrollable-after #wrapper-header-holder {
 	margin-top: 400px;
 }
 
